app_deployment/main.tf
terraform {
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = "6.14.1"
    }
  }
}


provider "aws" {
    region = "us-east-2"
  
}

variable "cidr" {
    default = "10.0.0.0/16"
  
}

resource "aws_key_pair" "terraform_key" {
    key_name = "terraform-demo"
    public_key = file("~/.ssh/terraform-demo.pub")
  
}

resource "aws_vpc" "terraform_vpc" {
    cidr_block = var.cidr
  
}

resource "aws_subnet" "tf_public" {
    vpc_id = aws_vpc.terraform_vpc.id
    cidr_block = "10.0.0.0/24"
    availability_zone = "us-east-2a"
    map_public_ip_on_launch = true
  
}
resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.terraform_vpc.id
  
}

resource "aws_route_table" "TFRT" {
    vpc_id = aws_vpc.terraform_vpc.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.igw.id
    }
  
}

resource "aws_route_table_association" "rta1" {
  subnet_id      = aws_subnet.tf_public.id
  route_table_id = aws_route_table.TFRT.id
}
resource "aws_security_group" "webSg" {
  name   = "web"
  vpc_id = aws_vpc.terraform_vpc.id

  ingress {
    description = "HTTP from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Web-sg"
  }
}
resource "aws_instance" "server" {
  ami                    = "ami-0cfde0ea8edd312d4"
  instance_type          = "t2.micro"
  key_name      = aws_key_pair.terraform_key.key_name
  vpc_security_group_ids = [aws_security_group.webSg.id]
  subnet_id              = aws_subnet.tf_public.id

  connection {
    type        = "ssh"
    user        = "ubuntu"  
    private_key = file("~/.ssh/terraform-demo.pub")  
    host        = self.public_ip
  }

  # File provisioner to copy a file from local to the remote EC2 instance
  provisioner "file" {
    source      = "app.py"  
    destination = "/home/ubuntu/app.py"  
  }

  provisioner "remote-exec" {
    inline = [
      "echo 'Hello from the remote instance'",
      "sudo apt update -y",  # Update package lists (for ubuntu)
      "sudo apt-get install -y python3-pip",  # Example package installation
      "cd /home/ubuntu",
      "sudo pip3 install flask",
      "sudo python3 app.py &",
    ]
  }
}
